# QtWin32DirectManipulateHelper

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/quick/: CMakeLists.txt  main.cpp  main.qml
examples/qwdmh/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  DirectManipulationSystem.cpp  DirectManipulationSystem.h  DirectManipulationSystem_p.h  QWDMHCoreGlobal.h
